<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_gravity="center|center_horizontal"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="122dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="117dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/FrameFormas"
        android:layout_width="272dp"
        android:layout_height="172dp"
        android:layout_gravity="center">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/GdFormas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:columnCount="3">

            <ImageView
                android:id="@+id/ivCuadrado"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/description_image_button_cuadrado"
                android:src="@drawable/__cuadrado" />

            <ImageView
                android:id="@+id/ivRectangulo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/description_image_button_rectangulo"
                android:src="@drawable/__rectangulo" />

            <ImageView
                android:id="@+id/ivTriangulo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/description_image_button_triangulo"
                android:src="@drawable/__triangulo" />

            <ImageView
                android:id="@+id/ivCirculo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/description_image_button_circulo"
                android:src="@drawable/__circulo" />

            <ImageView
                android:id="@+id/ivPentagono"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/description_image_button_pentagono"
                android:src="@drawable/__pentagono" />

            <ImageView
                android:id="@+id/ivHexagono"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/description_image_button_hexago"
                android:src="@drawable/__hexagono" />
        </androidx.gridlayout.widget.GridLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/grupo"
            android:layout_width="99dp"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rdAltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="Altura"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rdBase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="Base"
                android:textSize="20sp"
                android:visibility="visible" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="188dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAltura"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="25dp"
                android:text="Altura"
                android:textAlignment="center"
                android:textSize="20sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvBase"
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Base"
                android:textAlignment="center"
                android:textSize="20sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvResultado"
                android:layout_width="179dp"
                android:layout_height="43dp"
                android:layout_gravity="left"
                android:text="Resultado"
                android:textAlignment="center"
                android:textSize="24sp"
                android:visibility="invisible" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivActual"
            android:layout_width="98dp"
            android:layout_height="66dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/__triangulo"
            android:visibility="invisible" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="331dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:columnCount="3">

            <ImageView
                android:id="@+id/iv_9"
                android:layout_width="110dp"
                android:layout_height="75dp"
                android:contentDescription="@string/description_image_button_nueve"
                android:src="@drawable/_9"
                app:layout_column="0"
                app:layout_row="0" />

            <ImageView
                android:id="@+id/iv_8"
                android:layout_width="110dp"
                android:layout_height="75dp"
                android:contentDescription="@string/description_image_button_ocho"
                android:src="@drawable/_8"
                app:layout_column="1"
                app:layout_row="0" />

            <ImageView
                android:id="@+id/iv_7"
                android:layout_width="110dp"
                android:layout_height="75dp"
                android:contentDescription="@string/description_image_button_siete"
                android:src="@drawable/_7"
                app:layout_column="2"
                app:layout_row="0" />

            <ImageView
                android:id="@+id/iv_6"
                android:layout_width="110dp"
                android:layout_height="75dp"
                android:contentDescription="@string/description_image_button_seis"
                android:src="@drawable/_6"
                app:layout_column="0"
                app:layout_row="1" />

            <ImageView
                android:id="@+id/iv_5"
                android:layout_width="110dp"
                android:layout_height="75dp"
                android:contentDescription="@string/description_image_button_cinco"
                android:src="@drawable/_5"
                app:layout_column="1"
                app:layout_row="1" />

            <ImageView
                android:id="@+id/iv_4"
                android:layout_width="110dp"
                android:layout_height="75dp"
                android:contentDescription="@string/description_image_button_cuatro"
                android:src="@drawable/_4"
                app:layout_column="2"
                app:layout_row="1" />

            <ImageView
                android:id="@+id/iv_3"
                android:layout_width="110dp"
                android:layout_height="75dp"
                android:contentDescription="@string/description_image_button_tres"
                android:src="@drawable/_3"
                app:layout_column="0"
                app:layout_row="2" />

            <ImageView
                android:id="@+id/iv_2"
                android:layout_width="110dp"
                android:layout_height="75dp"
                android:contentDescription="@string/description_image_button_dos"
                android:src="@drawable/_2"
                app:layout_column="1"
                app:layout_row="2" />

            <ImageView
                android:id="@+id/iv_1"
                android:layout_width="110dp"
                android:layout_height="75dp"
                android:contentDescription="@string/description_image_button_uno"
                android:src="@drawable/_1"
                app:layout_column="2"
                app:layout_row="2" />

            <ImageView
                android:id="@+id/iv_Calcular"
                android:layout_width="110dp"
                android:layout_height="75dp"
                android:contentDescription="@string/description_image_button_calcular"
                android:src="@drawable/calcularbotton"
                app:layout_column="0"
                app:layout_row="3" />

            <ImageView
                android:id="@+id/iv_0"
                android:layout_width="110dp"
                android:layout_height="75dp"
                android:contentDescription="@string/description_image_button_zero"
                android:src="@drawable/_0"
                app:layout_column="1"
                app:layout_row="3" />

            <ImageView
                android:id="@+id/iv_Borrar"
                android:layout_width="110dp"
                android:layout_height="75dp"
                android:contentDescription="@string/description_image_button_borrar"
                android:src="@drawable/borrarbotton"
                app:layout_column="2"
                app:layout_row="3" />
        </androidx.gridlayout.widget.GridLayout>
    </FrameLayout>


</LinearLayout>